tdf#137085 writerfilter: RTF import: \trpaddfl and \trpaddl are row...

...properties, not cell properties.

What is supposed to happen here, afaict:

1. \trpaddfr3 either has an effect on the left margin too (despite being
   defined for right), or \trpaddfl3 is the default, 0 is not the
   default

2. \trgaph600 should be ignored if the \trpaddfl3 is in effect

3. \trpaddl0 should be in effect, overriding both the value from
   \trgaph600 and the built-in default of #define DEF_BORDER_DIST 190

CellMarginHandler::lcl_sprm() needs to distinguish between \trpaddfl0
and \trpaddfl3 cases, but its not possible currently because a)
\trpaddfl is processed after \trgaph/\trpaddl, and b) both \trgaph and
\trpaddl produce the same srpm-id.

This fixes \trpaddl handling just enough to import the bugdoc properly,
for more fixing a new sprm-id for \trgaph would be needed at least.

At the other end, there is a line in DomainMapperTableHandler.cxx:
  m_aTableProperties->getValue( TablePropertyMap::GAP_HALF, nGapHalf )
... but nothing that would initialize the GAP_HALF there.

That this bugdoc looked right before commit
c2a5346b19c57f93f210b76c15cdba64f6871203 appears to be entirely
accidental.

Change-Id: I80dc34bdd5dadb7d7d7f5ec595907035d621a656
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104638
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>
(cherry picked from commit fc872146845e4d77ff404d0929f28abf2d3a1c51)